Update home styling

--- a/style.css
+++ b/style.css
@@ -373,7 +373,8 @@ p {
 	background-color: #d8a731;
 }
 
-#page ul.list {
+#page ul.list,
+#page ol li {
 	margin: 8px 0 8px 20px;
 	padding: 15px 0;
 	list-style-type: disc;
@@ -382,6 +383,10 @@ p {
 #page ul.list li {
 	padding: 7px 0;
 	line-height: 1.6em;
+}
+
+#page ol li {
+	list-style-type: decimal;
 }
 
 #page .button,
@@ -537,7 +542,7 @@ body.home canvas {
 	background-position: center center;
 	background-size: contain;
 	height: 80px;
-	margin: 5px 12px 0;
+	margin: 20px 12px 0;
 	-webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
 	filter: grayscale(100%);
 	opacity: 0.7
@@ -616,6 +621,14 @@ body.home #footer {
 	background-size: 65%;
 	background-repeat: no-repeat;
 	background-position: left center;
+}
+
+#page .work a.mobile-none {
+	cursor: not-allowed;
+}
+
+#page .work a.mobile-none .devices strong:hover {
+	color: #fff;
 }
 
 #page .work a span em,
@@ -1046,6 +1059,7 @@ body.home #footer {
 	-------------------------------------------------------------	*/
 
 #gallery p:not(:first-child),
+#gallery blockquote,
 #gallery .image_description:not(:first-child),
 #gallery img.item,
 #page .work_menu,
@@ -1118,7 +1132,7 @@ body.home #footer {
 }
 
 #page .work_menu {
-	padding: 5% 10% 5% 10%;
+	padding: 5% 8% 5% 8%;
 	font-size: 0.9em;
 }
 
@@ -1419,6 +1433,9 @@ body.home #footer {
 	-moz-transform: scale(0.4);
 	-webkit-transform: scale(0.4);
 	transform: scale(0.4);
+	-webkit-transition: all 0.5s ease;
+	-moz-transition: all 0.5s ease;
+	transition: all 0.5s ease;
 	content: url('images/avatar.png');
 }
 
